# StarAgent

./: .gitignore  ARCHITECTURE.md  FEISHU.md  LICENSE  README.md  SESSIONS.md  pyproject.toml
staragent/: adopt.py  dependencies.py  hub.py  main.py  models.py  paths.py  pty_terminal.py  runtime.py  schemas.py  session_parser.py  status.py  tailscale.py  transcript.py
staragent/dashboard/: app.py
staragent/dashboard/static/: explorer.js  styles.css
staragent/dashboard/templates/: base.html  index.html  login.html  nodes.html  session.html
staragent/integrations/: __init__.py  feishu.py
staragent/node/: __init__.py  app.py
tailscale/: README.md
tailscale/scripts/: check-network.sh  expose-agent.sh  join-systemd.sh  join-userspace.sh  one-click-remote-node.sh  status.sh
tests/: test_feishu_integration.py  test_security_regressions.py
