[project]
name = "staragent"
version = "0.1.0"
description = "StarAgent dashboard and CLI for coding-agent sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "rich>=13.7",
  "typer>=0.12",
  "uvicorn>=0.30",
  "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
  "httpx2>=0.28",
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
staragent = "staragent.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"staragent/dashboard/app.py" = ["B008"]
"staragent/main.py" = ["B008"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
